# xLearn

./: .gitignore  COPYRIGHT.txt  Makefile  README.txt  get-dataset  get-test-videos
camiface/: CMakeLists.txt
camiface/demo/: frame_grabber.c
demos/: attention.lua  face-detect-multiscale.lua  face-detect-segmented.lua  face-detect.lua  faces-attention.lua  live-kinect.lua  live-segm+sift.lua  live-segm.lua  live-sift.lua  opencv-tester.lua  opencv-tester.ui  test-cam.lua  test-opticalFlow.lua  test-segmentation.lua  test-stereo.lua  train-on-faces.lua  train-on-mnist.lua
demos-luaflow/: backprop-example.lua  filter-bank.lua  generic-xflow-net.lua  simple-xflow-02-test.lua  simple-xflow-03-test.lua  simple-xflow-loader.lua
demos-luaflow/networks/: xflow-first-example.xfl  xflow-simple.xfl
demos-neuflow/: client-attention.lua  client-attention.ui  client-debug-conv.lua  client-debug-convacc.lua  client-debug-div.lua  client-debug-loopback.lua  client-debug-nconvs.lua  client-debug-norm.lua  client-facedetect-off.lua  client-facedetect-simple.lua  client-facedetect.lua  client-facedetect_button.lua  client-facedetect_button.ui  client-gabor_button.lua  client-lagr.lua  client-loopback.lua  client-simple.ui  client-temp-diff.ui  client-temporal-diff.lua  client-temporal-diff_button.lua
luajit-torch/: Makefile
luajit-torch/src/: THBlas.c  THStorageGen.c  lib_torch.c  luaconf.h
luajit-torch/tests/: test.lua
luarocks/: Makefile  config.unix
luarocks/src/luarocks/: config.lua
torch/: CMakeLists.txt  README.txt
torch/contrib/NeuFlow/: CMakeLists.txt  Compiler.lua  CoreUser.lua  NeuFlow.lua  tools.lua
torch/contrib/XLearn/: AutoEncoderTrainer.lua  CCSub.lua  CMakeLists.txt  Decider.lua  Displayer.lua  GaborLayer.lua  ImageSource.lua  ImageTransform.lua  LcDecoder.c  LcEncoder.lua  LocalNorm.lua  LocalNorm_hardware.lua  OptionParser.lua  SpatialLinear.lua  SpatialLinearHessian.lua  StochasticTrainer.lua  Video.lua  imageBox.lua  init.c  init.lua  luaX.lua  table.lua  toolBox.c  toolBox.lua  xPrompt.lua
torch/contrib/XLearn/test/: test-LocalNorm.lua  test-spconvtable.lua
torch/contrib/bit/: bit.c
torch/contrib/camiface/: camiface.c
torch/contrib/etherflow/: CMakeLists.txt  FindDNET.cmake  etherflow.c
torch/contrib/jpeg/: CMakeLists.txt  init.lua
torch/contrib/luaFlow/: CMakeLists.txt  Node.lua  init.lua  luaflow.lua
torch/contrib/mincut/: CMakeLists.txt
torch/contrib/mpeg2/: CMakeLists.txt  FindMPEG2.cmake
torch/contrib/mstsegm/: CMakeLists.txt  init.lua  mstsegm.cpp  segment-features.h  segment-image.h  segment-incremental.h  segment-streaming.h  segment-volume.h
torch/contrib/opencv/: CMakeLists.txt  FindOpenCV.cmake  init.lua  opencv.c
torch/contrib/opticalFlow/: CMakeLists.txt  Image.h  OpticalFlowCode.cpp  init.lua  opticalFlow.cpp  project.h
torch/contrib/pink/: CMakeLists.txt  avscrop.h  bddsing.c  bimage.c  init.lua  l2dcollapse.c  l2dkhalimsky.c  l3dkhalimsky.c  l3dkhalimsky.h  lMSF.c  larith.c  lasft.c  lballincl.c  lbarycentre.c  lbarycentre.h  lblob.h  lbresen.c  lbresen.h  lccv.h  lcomphisto.c  lcurves.c  ldetectcercles.c  ldiZenzo.c  ldiZenzo.h  ldilatbin.c  ldilatbin.h  ldilateros.c  ldilatfast.c  ldir.h  ldistgeo.c  ldynamique.c  leden.h  lellipsefit.h  lepaisgeo.h  lerosbin.h  lerosbin3d.h  lerosfast.h  lerosfast3d.c  lerosfast3d.h  lerosplan.c  (+60 more)
torch/contrib/powerwatersegm/: CMakeLists.txt  cs_cholsol.c  gageodesic.cpp  init.lua  mcindic.cpp  powerwatersegm.cpp  powerwatersegm.h  random_walker.h  union_find.cpp
torch/contrib/stereo/: CMakeLists.txt  stereo.cpp
torch/contrib/thread/: CMakeLists.txt  queue.lua
torch/contrib/video4linux/: CMakeLists.txt  v4l.c
torch/contrib/xFlow/: engine_0.1.lua  init.lua  lib-math.lua
torch/libraries/luaT/: luaT.c
torch/qtlua/: CMakeLists.txt
torch/qtlua/qlua/: CMakeLists.txt  qlua.cpp  qluaapplication.cpp  qluaapplication.h  qluaconsole_unix.cpp
torch/qtlua/qtlua/: CMakeLists.txt  qtluaengine.cpp  qtluaengine.h  qtluautils.h
torch/qtlua/qtutil/: CMakeLists.txt
torch/scripts/: FindMKL.cmake
torch/website/: CMakeLists.txt  credits.hlp  download.hlp  index.hlp  sourceforge.hlp  webtemplate.html  webtorch.css
trained-nets/: network-face-detect
xFlow/: Makefile  xflow-translate
xFlow/emacs/: xflow-mode.el
xFlow/examples/: test-autoencoder.xfl  test-complex.xfl  test-nested.xfl  test-simple.xfl
xFlow/libraries/: libmath.xfl  libneural.xfl  libstd.xfl
xFlow/m4/: lua.m4  lush.m4
